--- a/css/styles.css
+++ b/css/styles.css
@@ -316,18 +316,19 @@ ul {
 
 .social-links-block {
   display: flex;
-  align-items: center;
-  padding: 16px 32px 30px 32px;
+  justify-content: center;
+  padding-top: 16px;
+  padding-bottom: 30px;
 }
 
 .social-links {
   display: flex;
   align-items: center;
   justify-content: center;
+  fill: var(--icons-color);
   width: 44px;
   height: 44px;
   margin-right: 10px;
-  fill: var(--icons-color);
 }
 
 .social-links:last-child {
@@ -469,6 +470,10 @@ ul {
   height: 40px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+}
+
+.social-link {
+  display: block;
 }
 
 .social-link-footer {
