--- a/css/styles.css
+++ b/css/styles.css
@@ -515,11 +515,14 @@ ul {
 }
 
 .nav-button:hover,
-.nav-link:focus,
-.nav-link:active {
+.nav-button:focus {
   color: var(--hero-text-color);
   background-color: var(--accent-color);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--accent-color);
 }
 
 /* portfolio examples section */
